--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
           <ul class="card__list">
             <li class="card">
               <img
-                src="./images/Image cards/yosemite-valley.jpg"
+                src="./images/Imagecards/yosemite-valley.jpg"
+                alt="Valley"
                 class="card__image"
               />
               <div class="card__description">
@@ -50,7 +51,8 @@
             </li>
             <li class="card">
               <img
-                src="./images/Image cards/lake-louise.png"
+                src="./images/Imagecards/lake-louise.png"
+                alt="Lake"
                 class="card__image"
               />
               <div class="card__description">
@@ -60,7 +62,8 @@
             </li>
             <li class="card">
               <img
-                src="./images/Image cards/bald-mountains.png"
+                src="./images/Imagecards/bald-mountains.png"
+                alt="Mountains"
                 class="card__image"
               />
               <div class="card__description">
@@ -69,7 +72,11 @@
               </div>
             </li>
             <li class="card">
-              <img src="./images/Image cards/latemar.png" class="card__image" />
+              <img
+                src="./images/Imagecards/latemar.png"
+                alt="Latemar"
+                class="card__image"
+              />
               <div class="card__description">
                 <h2 class="card__title">Latemar</h2>
                 <button class="button__like-button"></button>
@@ -77,7 +84,8 @@
             </li>
             <li class="card">
               <img
-                src="./images/Image cards/vanoise-national-park.png"
+                src="./images/Imagecards/vanoise-national-park.png"
+                alt="Park"
                 class="card__image"
               />
               <div class="card__description">
@@ -87,7 +95,8 @@
             </li>
             <li class="card">
               <img
-                src="./images/Image cards/lago-di-braies.png"
+                src="./images/Imagecards/lago-di-braies.png"
+                alt="Braies"
                 class="card__image"
               />
               <div class="card__description">
