--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
             <button class="profile__edit-button"></button>
-            <p class="profile__description">
+            <!-- <p class="profile__description">
               Explorer : a person who travels in search of new geographical or
               scientific information.
-              <!--  The largest shadow vessel ever built by
+              The largest shadow vessel ever built by
               Holland’s Damen Yachting, this explorer comes with a rear-deck
               helipad and hangar big enough to accommodate an Airbus ACH-135
-              helicopter. -->
-            </p>
-            <!-- <p class="profile__description">Explorer</p> -->
+              helicopter. 
+            </p> -->
+            <p class="profile__description">Explorer</p>
           </div>
           <button class="profile__add-button"></button>
         </section>
@@ -107,6 +107,16 @@
           </ul>
         </section>
       </main>
+      <footer id="footer" class="footer">
+        <div class="footer__content">
+          <!-- <img
+            src="./images/Footer.png"
+            alt="footer__copyright"
+            class="footer__logo"
+          /> -->
+          <p class="footer__copyright">&copy; 2025 Kenneth Hamilton</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
