--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
   <body class="page">
     <div class="page__content">
       <header class="header page__section">
-        <img src="./images/Logo.png" alt="Around The U.S" />
+        <img
+          src="./images/Header.png"
+          alt="Vector"
+          src="./images/Vector.svg"
+          alt="Around The U.S"
+        />
+        <img src="./images/Line.png" alt="Line" />
       </header>
       <main class="content">
         <section class="profile">
@@ -23,10 +29,10 @@
           />
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
-            <button class="profile__edit-button"></button>
+            <button alt="ebutton" class="profile__edit-button"></button>
             <p class="profile__description">Explorer</p>
           </div>
-          <button class="profile__add-button"></button>
+          <button alt="abutton" class="profile__add-button"></button>
         </section>
         <section class="cards page__section">
           <ul class="card__list">
