--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <meta name="keywords" content="HTML, CSS" />
     <meta name="author" content="kenneth hamilton" />
     <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="stylesheet" href="style.css" />
     <title>Around The U.S</title>
   </head>
   <body class="page">
     <div class="page__content">
       <header class="header page__section">
-        <img src="./images/Header.svg" alt="Vector" />
+        <img src="./images/Header.svg" alt="Vector" class="Header_Logo" />
       </header>
       <main class="content">
         <section class="profile">
@@ -25,14 +24,14 @@
           <div class="profile__info">
             <div class="profile_name">
               <h1 class="profile__title">Jacques Cousteau</h1>
-              <button alt="ebutton" class="profile__edit-button"></button>
+              <button class="profile__edit-button" type="button"></button>
             </div>
             <p class="profile__description">Explorer</p>
           </div>
-          <button alt="abutton" class="profile__add-button"></button>
+          <button class="profile__add-button" type="button"></button>
         </section>
         <section class="cards page__section">
-          <ul class="card__list">
+          <ul class="cards__list">
             <li class="card">
               <img
                 src="./images/Imagecards/yosemite-valley.jpg"
@@ -41,7 +40,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Yosemite Valley</h2>
-                <button class="button__like-button"></button>
+                <button class="button__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
@@ -52,7 +51,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Lake Louise</h2>
-                <button class="button__like-button"></button>
+                <button class="button__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
@@ -63,7 +62,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Bald Mountains</h2>
-                <button class="button__like-button"></button>
+                <button class="button__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
@@ -74,7 +73,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Latemar</h2>
-                <button class="button__like-button"></button>
+                <button class="button__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
@@ -85,7 +84,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Vanoise National Park</h2>
-                <button class="button__like-button"></button>
+                <button class="button__like-button" type="button"></button>
               </div>
             </li>
             <li class="card">
@@ -96,13 +95,13 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Lago di Braies</h2>
-                <button class="button__like-button"></button>
+                <button class="button__like-button" type="button"></button>
               </div>
             </li>
           </ul>
         </section>
       </main>
-      <footer id="footer" class="footer">
+      <footer id="footer" class="footer page__section">
         <div class="footer__content">
           <p class="footer__copyright">&copy; 2025 Kenneth Hamilton</p>
         </div>
