--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body class="page">
     <div class="page__content">
       <header class="header page__section">
-        <img src="./images/Header.svg" alt="Vector" class="Header_Logo" />
+        <img src="./images/header.svg" alt="vector" class="header_logo" />
       </header>
       <main class="content">
         <section class="profile">
@@ -22,7 +22,7 @@
             class="profile__image"
           />
           <div class="profile__info">
-            <div class="profile_name">
+            <div class="profile__name">
               <h1 class="profile__title">Jacques Cousteau</h1>
               <button class="profile__edit-button" type="button"></button>
             </div>
@@ -102,9 +102,7 @@
         </section>
       </main>
       <footer id="footer" class="footer page__section">
-        <div class="footer__content">
-          <p class="footer__copyright">&copy; 2025 Kenneth Hamilton</p>
-        </div>
+        <p class="footer__copyright">&copy; 2025 Kenneth Hamilton</p>
       </footer>
     </div>
   </body>
